--- a/index.qmd
+++ b/index.qmd
@@ -1,2 +1,7 @@
 ## SVD burden annotation project
 
+This page is intended as a reference manual for accessors as well as
+other collaborators in annotating and analysing a large clinical dataset
+of stroke patients from Aarhus University Hospital included in different
+research projects.
+
