--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,12 @@
-## SVD burden annotation project
+---
+title: "SVD burden annotation project"
+format: html
+type: about
+---
+
+## About
 
 This page is intended as a reference manual for accessors as well as
 other collaborators in annotating and analysing a large clinical dataset
 of stroke patients from Aarhus University Hospital included in different
 research projects.
-
