--- a/doc/accessor-intro.qmd
+++ b/doc/accessor-intro.qmd
@@ -1,13 +1,14 @@
 ---
 title: "Accessor introduction"
-author: "Andreas G. Damsbo"
-format: pdf
+date: last-modified
+format: 
+  html: default
+  docx: default
 editor: visual
+toc: true
 ---
 
-Small vessel disease burden project (Pooled TALOS and RESIST)
-
-# Introduction
+## Motivation
 
 SVD in the brain is still uncharted territory. We have two large
 datasets (possibly supplemented with additional projects) on acute
@@ -16,100 +17,67 @@ from MRI scans. The first project is to investigate the relationship
 between various lifestyle factors and the degree of SVD among stroke
 patients. We also plan to use the data for other projects in the future.
 
-# Establishing a Consensus
+## Annotation and capturing
 
 No widely used scoring system exists, that considers all elements of
 SVD. The Fazekas score is widely used, but only accounts for white
 matter hyperintensities (WMH).
 
-Based on existing studies, we have developed a scoring tool for this
-purpose, relying on FLAIR and T2\*/SWI sequences from the acute scans.
-We are interested in microbleeds, superficial siderosis, previous
-lacunar infarcts, white matter hyperintensities, and atrophy.
+Based on existing studies, [we have developed a scoring tool for this
+purpose](https://agdamsbo.github.io/cSVD-burden-annotation-and-analysis-project/doc/svd-score.html),
+relying on FLAIR and T2\*/SWI sequences from the acute scans. We are
+interested in microbleeds, superficial siderosis, previous lacunar
+infarcts, white matter hyperintensities, and atrophy.
 
 We have created a minimal registration tool in REDCap, that will later
 be enriched with metadata on the scans.
 
-# Participation
+## Participation
 
 I want to invite you all to participate in this project. I will conduct
 a short teaching session on the material (see later), and you will be
 assigned a set number of subjects to evaluate.
 
-Your benefits:
+The project will run in two phases. In total I hope to have around 1000
+subjects scored. Depending on how many accessors, ready to help, the
+math is pretty clear. The expected time use pr subject is 5-15 minutes
+when everything is set up.
 
--       Role as co-author on the first paper based on the data and
-possibly participate on later publications (normal criteria for
-participation)
+What you get for helping out:
 
--       Extensive experience evaluating SVD in acute stroke patients
-which will benefit you and your patients in the future
+-   Role as co-author on the first paper based on the data and possibly
+    participate on later publications (normal criteria for
+    participation)
 
--       A big thank you
+-   Extensive experience evaluating SVD in acute stroke patients which
+    will benefit you and your patients in the future
 
--       Access to all source code used for data acquisition and analyses
-(shared under an open source license)
+-   A big thank you!
 
-# Game plan
+-   Access to all source code used for data acquisition and analyses
+    (shared under an open source license)
 
-When I get your response, I
+## Game plan
 
-\*\*Slide 5: Educational Material\*\*
+When I know who is participating, I will arrange for a short teaching
+session to go through the materials and giving a few examples. Then I
+expect the work to go as follows:
 
-\- \*\*Objective:\*\* Facilitate understanding through various
-resources.
+-   Everyone scores the same 10 subjects, and I will calculate
+    inter-rater-reliability statistics. If measures are not satisfying I
+    will go through instructions again with some added feedback, and
+    well have to try again. If/when satisfied,
 
-\- Create instructional videos or documentation.
+-   I will allocate a specific number of subjects to each of you
+    accessors. You can score your allocated subjects on your personal
+    computer (please ensure adequate lightning conditions) and at any
+    time you like. You'll need access to Citrix and PACS. I have created
+    a few suggestions and notes on an optimal workflow
+    [here](https://agdamsbo.github.io/cSVD-burden-annotation-and-analysis-project/doc/score-flow.html).
 
-\- Ensure scoring can be done on a standard computer.
+-   During the scoring process I will be able to follow the progress and
+    check-in with you to provide help if needed. And I'll make sure to
+    create a few competitions along the way.
 
-\- Consider a short course with examples (pull from ENIGMA).
-
-\-\--
-
-\*\*Slide 6: Initial Scoring and Reliability Test\*\*
-
-\- \*\*Objective:\*\* Ensure consistency.
-
-\- All participants perform the same first 10 scorings.
-
-\- Conduct an inter-rater-reliability test.
-
-\- If acceptable, proceed; if not, rerun education.
-
-\-\--
-
-\*\*Slide 7: Team Engagement\*\*
-
-\- \*\*Objective:\*\* Maintain motivation and collaboration.
-
-\- Delegate a set number of subjects to each colleague.
-
-\- Foster team spirit through friendly competitions.
-
-\-\--
-
-\*\*Slide 8: Project Milestones\*\*
-
-\- Highlight key milestones and deadlines.
-
-\- Regular check-ins and progress updates.
-
-\-\--
-
-\*\*Slide 9: Q&A\*\*
-
-\- Open the floor for questions and discussions.
-
-\-\--
-
-\*\*Slide 10: Conclusion\*\*
-
-\- Thank you for your commitment to advancing our MRI-based scans!
-
-\- Stay tuned for updates and let's make Project C a success together!
-
-\-\--
-
-Feel free to customize the script further based on your specific needs
-and additional details.
+-   When all participants are scored, I will be performing analyses and
+    send you the draft manuscript for comments.
