overhaul and ready to launch

--- a/doc/_score-flow.qmd
+++ b/doc/_score-flow.qmd
@@ -1,15 +1,6 @@
----
-title: "Scoring workflow"
-date: last-modified
-format: 
-  html: default
-  pdf: default
-editor: visual
----
+## Suggested workflow {#sec-suggested-workflow}
 
-## Suggested workflow
-
-In REDCap:
+**In REDCap:**
 
 1.  Open the scoring overview in REDCap:
     [link](https://redcap.au.dk/redcap_v13.7.21/DataEntry/record_home.php?pid=8420)
@@ -19,37 +10,39 @@ In REDCap:
 
 3.  Open the "SVD score" instrument to start capturing the score. If the
     "dot" is yellow, the instrument already has been filled. Press the
-    "+"-sign to create a new version (mainly necessary for the
+    "+"-sign to create a new version (mainly necessary during the
+    inter-rater-reliability testing, as each subject is only scored
+    once)
 
 4.  In the top of the instrument the patient CPR, name and admission
-    time is printed.
+    time is printed as well as assigned assessor and link to Citrix.
 
-In Citrix:
+**In Citrix:**
 
-5.  Open the remote Citrix access: [link](https://citrix.rm.dk)
+5.  Open the "Billeddiagnostik PACS" module (find it under "APPS" and
+    "star" it the first time) and look up the patient using the CPR
+    number copied from REDCap.
 
-6.  Open the PACS module and look up the patient using the CPR number
-    from REDCap.
+6.  Please use the subject admission date and time as reference to
+    select the correct scan and the exact date and time of the scan
+    (fields are pre-filled with admission date and time).
 
-7.  Please use the subject admission date and time as reference to
-    select the correct scan.
-
-8.  The scan might take a minute or two to load from the storage server.
+7.  The scan might take a minute or two to load from the storage server.
     A little patience is necessary. The first time, you can use this
-    time to arrange your program windows for optimal workflow. See
-    {#workflow-notes}.
+    time to arrange your program windows for optimal workflow. See the
+    notes below.
 
-Back in REDCap:
+**Back in REDCap:**
 
-9.  When done filling out all fields, you can save the data and go
+8.  When done filling out all fields, you can save the data and go
     directly to the next subject:
 
     On the right and at the end of the instrument, there are two blue
     boxes. The top is "Save & Exit Form", the second have different
     options to choose from by clicking the arrow on the right. Choose
-    "Save & Go To Next Record". Then repeat step 3-9.
+    "Save & Go To Next Record". Then repeat step 3-8.
 
-### Notes {#workflow-notes}
+### Notes {#sec-notes}
 
 -   During scoring, I (Andreas) had the PACS screen maximized on the
     left side of a large, wide monitor, and REDCap on the right. PACS
