--- a/index.qmd
+++ b/index.qmd
@@ -7,6 +7,6 @@ about: jolla
 ## About
 
 This page is intended as a reference manual for accessors as well as
-other collaborators in annotating and analysing a large clinical dataset
-of stroke patients from Aarhus University Hospital included in different
-research projects.
+other collaborators in annotating and analysing a large pooled, clinical
+dataset of stroke patients from Aarhus University Hospital included in
+different research projects.
