--- a/doc/assessor-intro.qmd
+++ b/doc/assessor-intro.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Accessor introduction"
+title: "Assessor information"
 date: last-modified
 format: 
   html: default
@@ -20,8 +20,8 @@ patients. We also plan to use the data for other projects in the future.
 
 ## Annotation and capturing
 
-No widely used scoring system exists, that considers all elements of
-SVD. The Fazekas score is widely used, but only accounts for white
+No widely used scoring system exists, that considers all elements of SVD
+on MRI. The Fazekas score is widely used, but only accounts for white
 matter hyperintensities (WMH).
 
 Based on existing studies, [we have developed a scoring tool for this
@@ -40,8 +40,8 @@ a short teaching session on the material (see later), and you will be
 assigned a set number of subjects to evaluate.
 
 The project will run in two phases. In total I hope to have around 1000
-subjects scored. Depending on how many accessors, ready to help, the
-math is pretty clear. The expected time use pr subject is 5-15 minutes
+subjects scored. Depending on how many assessors are ready to help, the
+math is pretty clear. The expected time use pr subject is 2-10 minutes
 when everything is set up.
 
 What you get for helping out:
@@ -55,7 +55,7 @@ What you get for helping out:
 
 -   A big thank you!
 
--   Access to all source code used for data acquisition and analyses
+-   Assess to all source code used for data acquisition and analyses
     (shared under an open source license)
 
 ## Game plan
@@ -69,16 +69,17 @@ expect the work to go as follows:
     will go through instructions again with some added feedback, and
     well have to try again. If/when satisfied,
 
--   I will allocate a specific number of subjects to each of you
-    accessors. You can score your allocated subjects on your personal
-    computer (please ensure adequate lightning conditions) and at any
-    time you like. You'll need access to Citrix and PACS. I have created
-    a few suggestions and notes on an optimal workflow
-    [here](https://agdamsbo.github.io/cSVD-burden-annotation-and-analysis-project/doc/score-flow.html).
+-   I will allocate a specific number of subjects to each assessor (see
+    [Allocations](down-to-work.qmd#sec-allocations)). You can score your
+    allocated subjects on your personal computer (please ensure adequate
+    lightning conditions) and at any time you like. You'll need assess
+    to Citrix and PACS. Below is the suggested optimal workflow to speed
+    up annotation (see
+    [Workflow](down-to-work.qmd#sec-suggested-workflow)).
 
 -   During the scoring process I will be able to follow the progress and
     check-in with you to provide help if needed. And I'll make sure to
     create a few competitions along the way.
 
 -   When all participants are scored, I will be performing analyses and
-    send you the draft manuscript for comments.
+    send the draft manuscript for comments.
