--- a/index.qmd
+++ b/index.qmd
@@ -9,9 +9,4 @@ about:
       text: Contact
 ---
 
-## About
-
-This page is intended as a reference manual for accessors as well as
-other collaborators in annotating and analysing a large pooled, clinical
-dataset of stroke patients from Aarhus University Hospital included in
-different research projects.
+{{< include README.md >}}
