--- a/doc/references.bib
+++ b/doc/references.bib
@@ -111,3 +111,51 @@ PMID: 25872513},
 	url = {http://dx.doi.org/10.2214/ajr.149.2.351},
 	langid = {en}
 }
+
+@article{wardlaw2021,
+	title = {ESO Guideline on covert cerebral small vessel disease},
+	author = {Wardlaw, Joanna M and Debette, Stephanie and Jokinen, Hanna and De Leeuw, Frank-Erik and Pantoni, Leonardo and Chabriat, Hugues and Staals, Julie and Doubal, Fergus and Rudilosso, Salvatore and Eppinger, Sebastian and Schilling, Sabrina and Ornello, Raffaele and Enzinger, Christian and Cordonnier, Charlotte and Taylor-Rowan, Martin and Lindgren, Arne G},
+	year = {2021},
+	month = {06},
+	date = {2021-06},
+	journal = {European Stroke Journal},
+	pages = {CXI--CLXII},
+	volume = {6},
+	number = {2},
+	doi = {10.1177/23969873211012132},
+	url = {http://journals.sagepub.com/doi/10.1177/23969873211012132},
+	langid = {en}
+}
+
+@article{olama2020,
+	title = {Simple MRI score aids prediction of dementia in cerebral small vessel disease},
+	author = {Olama, Ali Amin Al and Wason, James M. S. and Tuladhar, Anil M. and Leijsen, Esther M. C. van and Koini, Marisa and Hofer, Edith and Morris, Robin G. and Schmidt, Reinhold and Leeuw, Frank-Erik de and Markus, Hugh S.},
+	year = {2020},
+	month = {03},
+	date = {2020-03-24},
+	journal = {Neurology},
+	pages = {e1294--e1302},
+	volume = {94},
+	number = {12},
+	doi = {10.1212/WNL.0000000000009141},
+	url = {https://n.neurology.org/content/94/12/e1294},
+	note = {Publisher: Wolters Kluwer Health, Inc. on behalf of the American Academy of Neurology
+Section: Article
+PMID: 32123050},
+	langid = {en}
+}
+
+@article{markus2022,
+	title = {Framework for Clinical Trials in Cerebral Small Vessel Disease (FINESSE)},
+	author = {Markus, Hugh S. and van Der Flier, Wiesje M. and Smith, Eric E. and Bath, Philip and Biessels, Geert Jan and Briceno, Emily and Brodtman, Amy and Chabriat, Hugues and Chen, Christopher and de Leeuw, Frank-Erik and Egle, Marco and Ganesh, Aravind and Georgakis, Marios K. and Gottesman, Rebecca F. and Kwon, Sun and Launer, Lenore and Mok, Vincent and {O{\textquoteright}Brien}, John and Ottenhoff, Lois and Pendlebury, Sarah and Richard, Edo and Sachdev, Perminder and Schmidt, Reinhold and Springer, Melanie and Tiedt, Stefan and Wardlaw, Joanna M. and Verdelho, Ana and Webb, Alastair and Werring, David and Duering, Marco and Levine, Deborah and Dichgans, Martin},
+	year = {2022},
+	month = {11},
+	date = {2022-11-01},
+	journal = {JAMA Neurology},
+	pages = {1187},
+	volume = {79},
+	number = {11},
+	doi = {10.1001/jamaneurol.2022.2262},
+	url = {http://dx.doi.org/10.1001/jamaneurol.2022.2262},
+	langid = {en}
+}
